
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int ocs_textbuf_t ;
typedef int ocs_scsi_ddump_type_e ;
void
ocs_scsi_ini_ddump(ocs_textbuf_t *textbuf, ocs_scsi_ddump_type_e type, void *obj)
{
 switch(type) {
 case 132: {

  break;
 }
 case 131: {

  break;
 }
 case 128: {

  break;
 }
 case 129: {

  break;
 }
 case 130: {

  break;
 }
 default: {
  break;
 }
 }
}
